Youtube header and footer + Client to Clients

--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -171,6 +171,13 @@
 							</a>
 						</div>
 					</li>
+					<li class="list__item">
+						<div class="hidden-box d-inline-block">
+							<a href="#"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</li>
 				</ul>
 			</div><!-- header-social end -->
 		</header><!-- header end -->
@@ -191,7 +198,7 @@
 					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Clients</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
@@ -246,7 +253,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Client">Client</span>
+							<span class="nav-btn__inner" data-text="Client">Clients</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -693,7 +700,7 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
+							<a href="#"  target="_blank" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
 						</li>
 					</ul><!-- footer-social end -->
 
