--- a/web-development.html
+++ b/web-development.html
@@ -149,6 +149,13 @@
 							</a>
 						</div>
 					</li>
+					<li class="list__item">
+						<div class="hidden-box d-inline-block">
+							<a href="#"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</li>
 				</ul>
 			</div><!-- header-social end -->
 		</header><!-- header end -->
@@ -169,7 +176,7 @@
 					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Clients</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
@@ -224,7 +231,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Client">Client</span>
+							<span class="nav-btn__inner" data-text="Client">Clients</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -658,7 +665,10 @@
 							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
+						</li>
+						<li class="list__item">
+							<a href="#" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
 						</li>
 					</ul><!-- footer-social end -->
 
