--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href=""  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="#"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-youtube"></i>
 							</a>
 						</div>
@@ -219,7 +219,7 @@
 					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
+					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Clients</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="blog.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Blog</a>
@@ -274,7 +274,7 @@
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
 						<a href="client.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
-							<span class="nav-btn__inner" data-text="Client">Client</span>
+							<span class="nav-btn__inner" data-text="Client">Clients</span>
 						</a>
 					</li><!-- nav-btn-box end -->
 
@@ -649,7 +649,7 @@
 							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Linkedin">Linkedin</a>
 						</li>
 						<li class="list__item">
-							<a href=""  target="_blank" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
+							<a href="#"  target="_blank" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
 						</li>
 					</ul><!-- footer-social end -->
 
