--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -436,7 +436,7 @@
 								</div>
 								<div class="padding-top-30">
 									<div class="pos-rel">
-										<img src="assets/images/posts/digital-revolution/dr.jpg" alt="Post">
+										<img src="assets/images/posts/digital-revolution/dr.jpg" alt="digital-revolution">
 										<!-- bg-overlay -->
 										<div class="bg-overlay-black"></div>
 										<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -530,7 +530,7 @@
 								</div>
 								<div class="padding-top-30">
 									<div class="pos-rel">
-										<img src="assets/images/posts/digital-revolution/dr2.jpg" alt="Post">
+										<img src="assets/images/posts/digital-revolution/dr2.jpg" alt="digital-revolution">
 										<!-- bg-overlay -->
 										<div class="bg-overlay-black"></div>
 										<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
