--- a/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
+++ b/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
@@ -419,14 +419,14 @@
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-r-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/refine-marketing/refine-approach.jpg" alt="Post">
+															<img src="assets/images/posts/refine-marketing/refine-approach.jpg" alt="Marketing-approach">
 														</div>
 													</div><!-- column end -->
 
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-l-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/refine-marketing/refine-approach-1.jpg" alt="Post">
+															<img src="assets/images/posts/refine-marketing/refine-approach-1.jpg" alt="Marketing-approach">
 														</div>
 													</div><!-- column end -->
 												</div><!-- flex-container end -->
@@ -445,7 +445,7 @@
 						</div>
 
 						<div class="padding-top-30">
-							<img src="assets/images/posts/refine-marketing/refine-approach-2.jpg" alt="Post">
+							<img src="assets/images/posts/refine-marketing/refine-approach-2.jpg" alt="Marketing-approach">
 						</div>
 						<!-- <div class="container small">
 							<p class="body-text-s text-color-white margin-top-20">Farm-to-table twee subway tile DIY hoodie YOLO, lo-fi mumblecore tumeric green juice 8-bit chillwave tbh iceland. Tbh scenester craft beer cronut ramps truffaut semiotics. Vinyl selfies banjo, +1 gastropub tousled YOLO church-key. Asymmetrical subway tile chia health goth taxidermy mustache waistcoat forage. Forage umami vaporware butcher williamsburg retro. Swag pop-up seitan, vape everyday carry semiotics helvetica meggings photo booth cronut tattooed master cleanse flexitarian pork belly. Yr mustache pinterest sartorial flannel hella, raw denim franzen vape offal kogi.</p>
