--- a/about.html
+++ b/about.html
@@ -535,7 +535,7 @@
 						</div>
 
 						<div class="padding-top-30">
-							<img src="assets/images/about/about.jpg" alt="Post">
+							<img src="assets/images/about/about.jpg" alt="about-us">
 						</div>
 					</article><!-- entry-content end -->
 
