--- a/academy.html
+++ b/academy.html
@@ -486,7 +486,7 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="course">
+							<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="digital-marketing">
 
 						</div><!-- column end -->
 						<!-- column start -->
@@ -541,7 +541,7 @@
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
 							<a href="web-development" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" alt="course">
+								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" alt="web-development">
 							</a>
 						</div><!-- column end -->
 					</div><!-- flex-container end -->
@@ -551,7 +551,7 @@
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
 							<a href="graphic-design" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="course">
+								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="graphic-designing">
 							</a>
 						</div><!-- column end -->
 						<!-- column start -->
