--- a/blog.html
+++ b/blog.html
@@ -369,7 +369,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/essential/horizontal-essential.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/essential/horizontal-essential.jpg" alt="Blog-img">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Three Essential Digital Marketing</span>
@@ -397,7 +397,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="Revolution-in-digital-Space.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/digital-revolution/vertical-dr.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/digital-revolution/vertical-dr.jpg" alt="Blog-img2">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Revolution in digital Space</span>
@@ -425,7 +425,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/refine-marketing/horizontal-target.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/refine-marketing/horizontal-target.jpg" alt="Blog-img3">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">You Have a chance to Refine Your </span>
@@ -453,7 +453,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="top-choices-in-web-hosting.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Blog-img4">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">Top Choices In</span>
@@ -481,7 +481,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="the-future-is-multi-shaped.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/multi-shaped/horizontal.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/multi-shaped/horizontal.jpg" alt="Blog-img5">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">The Future Is Multi-shaped</span>
@@ -571,7 +571,7 @@
 								<a href="the-future-is-multi-shaped.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/multi-shaped/veritcal.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/multi-shaped/veritcal.jpg" alt="Blog-img">
 										</div>
 									</div>
 								</a>
@@ -584,7 +584,7 @@
 								<a href="top-choices-in-web-hosting.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/vertical-hosting.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/vertical-hosting.jpg" alt="Blog-img">
 										</div>
 									</div>
 								</a>
@@ -647,7 +647,7 @@
 								<a href="Revolution-in-digital-Space.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Blog-img">
 										</div>
 									</div>
 								</a>
@@ -660,7 +660,7 @@
 								<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/refine-marketing/vertical-target.jpg" alt="Blog-img">
 										</div>
 									</div>
 								</a>
@@ -730,7 +730,7 @@
 								<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/essential/vertical essential.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/essential/vertical essential.jpg" alt="Blog-img">
 										</div>
 									</div>
 								</a>
