--- a/client.html
+++ b/client.html
@@ -353,7 +353,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/Arm.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/Arm.jpg" alt="ARM">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Don't panic. Don't panic.<br>Don't panic.</h3> -->
@@ -365,7 +365,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/ast.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/ast.jpg" alt="ast">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Do red cars cost<br>more to insure</h3> -->
@@ -389,7 +389,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/cpg.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/cpg.jpg" alt="CPG">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home decor and furniture<br>stores near me</h3> -->
@@ -401,7 +401,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/cnn.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/cnn.jpg" alt="CNN">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Columns in modern<br>and classical architecture</h3> -->
@@ -413,7 +413,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/edu wings.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/edu wings.jpg" alt="Eduwings">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Best electronic music festivals<br>in the world</h3> -->
@@ -425,7 +425,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/carclub.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/carclub.jpg" alt="Carclub">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Good morning!<br>Have a nice day</h3> -->
@@ -437,7 +437,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/lancaster.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/lancaster.jpg" alt="Lancaster">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Selfie culture<br>and contemporary art</h3> -->
@@ -449,7 +449,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/leads.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/leads.jpg" alt="Leadz">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Second hand photography<br>studio equipment</h3> -->
@@ -461,7 +461,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/maithri.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/maithri.jpg" alt="Maithri">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Nature photography hashtags<br>for instagram</h3> -->
@@ -473,7 +473,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/nationalsawmill.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/nationalsawmill.jpg" alt="NationalSawmill">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
@@ -485,7 +485,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/powershift.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/powershift.jpg" alt="Powershift">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Music equipment<br>to record at home</h3> -->
@@ -495,7 +495,7 @@
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
 								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/clients/kanchi.jpg" alt="client">
+									<img class="img-hover-scale" src="assets/images/clients/kanchi.jpg" alt="Kanchi">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
 									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
