--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -421,14 +421,14 @@
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-r-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/multi-shaped/multishape03.jpg" alt="Post">
+															<img src="assets/images/posts/multi-shaped/multishape03.jpg" alt="Multi-shaped">
 														</div>
 													</div><!-- column end -->
 
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-l-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/multi-shaped/multishape04.jpg" alt="Post">
+															<img src="assets/images/posts/multi-shaped/multishape04.jpg" alt="Multi-shaped">
 														</div>
 													</div><!-- column end -->
 												</div><!-- flex-container end -->
@@ -485,7 +485,7 @@
 
 						<div class="padding-top-30">
 							<div class="pos-rel">
-								<img src="assets/images/posts/multi-shaped/multishape01.jpg" alt="Post">
+								<img src="assets/images/posts/multi-shaped/multishape01.jpg" alt="Multi-shaped">
 								<!-- bg-overlay -->
 								<div class="bg-overlay-black"></div>
 								<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -506,7 +506,7 @@
 							</div>
 
 							<div class="padding-top-30">
-								<img src="assets/images/posts/multi-shaped/multishape02.jpg" alt="Post">
+								<img src="assets/images/posts/multi-shaped/multishape02.jpg" alt="Multi-shaped">
 							</div>
 
 					</article><!-- entry-content end -->
