--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -403,7 +403,7 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/bluehost.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/bluehost.jpg" alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
@@ -474,7 +474,7 @@
 								<a href="#0" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/hostinger.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/hostinger.jpg" alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
@@ -487,7 +487,7 @@
 								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/hosting/siteground.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/hosting/siteground.jpg" alt="top-choices-in-web-hosting">
 										</div>
 									</div>
 								</a>
