--- a/index.html
+++ b/index.html
@@ -615,88 +615,88 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" alt="Automagic">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" alt="Automagic">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/arm.png" alt="ARM">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/arm-red.png" alt="ARM">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" alt="Maithri">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" alt="Maithri">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/carclub.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/carclub-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/carclub.png" alt="Carclub">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/carclub-red.png" alt="Carclub">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cnn.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cnn-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cnn.png" alt="CNN">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cnn-red.png" alt="CNN">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cpg.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cpg-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/cpg.png" alt="CPG">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/cpg-red.png" alt="CPG">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/edu-wings.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/edu-wings-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/edu-wings.png" alt="Edu-wings">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/edu-wings-red.png" alt="Edu-wings">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" alt="find-the-one">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" alt="find-the-one">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/royal intl.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/royal-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/royal intl.png" alt="Royal-international">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/royal-red.png" alt="Royal-international">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" alt="NSM">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" alt="NSM">
 								</div>
 							</div><!-- clients-lines__column end -->
 
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/lancaster.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/lancaster-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/lancaster.png" alt="Lancaster">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/lancaster-red.png" alt="Lancaster">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -744,7 +744,7 @@
 										 </p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/ps.png" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ps.png" alt="Powershift">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Powershift</span><br>
@@ -761,7 +761,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/ass timber.png" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/ass timber.png" alt="Associate Timbers">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Associate Timbers</span><br>
@@ -778,7 +778,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/arm-red.png" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/arm-red.png" alt="AR Motors">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">AR Motors</span><br>
@@ -795,7 +795,7 @@
 										</p>
 										<!-- anim-img-scale start -->
 										<div class="anim-img-scale testimonials-author border-radius-50perc">
-											<img class="anim-img-scale__inner" src="assets/images/clients/cpg-red.png" alt="author">
+											<img class="anim-img-scale__inner" src="assets/images/clients/cpg-red.png" alt="Career Point Global">
 										</div><!-- anim-img-scale end -->
 										<div class="margin-top-20 text-center">
 											<span class="headline-xxxs text-color-black">Career Point Global</span><br>
